[package]
name = "sunderiv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
